@@ -1,6 +1,7 @@
 Revision history for Perl extension PPI
 
 {{$NEXT}}
+	- Allow zero byte documents to have a location
 
 1.281   2024-12-27 14:44:47Z
 	Summary:
